# intelligent-course

./: README.md
IntelligentCoursePlanning/: .gitignore  CMakeLists.txt  README.md
IntelligentCoursePlanning/data/: README.md  course_info.csv  course_time.csv  course_visualization.html  dataset_stats.json  major_profiles.html  major_profiles.json  sample_constraints.json
IntelligentCoursePlanning/data/major_profiles/: art_education.json  artificial_intelligence.json  chinese_education.json  computer_science.json  data_science.json  english_education.json  history_education.json  math_education.json  preschool_education.json  primary_education.json  psychology.json  software_engineering.json
IntelligentCoursePlanning/docs/: AI_SKILL.md  实验报告.md
IntelligentCoursePlanning/docs/notes/: NOTE.md  PROJECT_DEFENCE.md  recap.txt  实现步骤.txt
IntelligentCoursePlanning/docs/reports/: 实验报告.md
IntelligentCoursePlanning/docs/requirements/: 学生使用说明.md  智能课程规划系统.md
IntelligentCoursePlanning/frontend/: ai-advisor.html  index.html  server.py  start.bat
IntelligentCoursePlanning/src/: main.cpp
IntelligentCoursePlanning/src/core/: conflict_detector.cpp  conflict_detector.h  prerequisite_graph.cpp  prerequisite_graph.h  scheduler.cpp  scheduler.h
IntelligentCoursePlanning/src/data/: csv_loader.cpp  csv_loader.h  json_exporter.cpp  json_exporter.h  json_loader.cpp  json_loader.h
IntelligentCoursePlanning/src/models/: constraint.h  course.h  time_slot.h
IntelligentCoursePlanning/src/utils/: json_parser.h  string_utils.h
